Front end updates to list page

--- a/static/rachel/views/create-list.html
+++ b/static/rachel/views/create-list.html
@@ -1,5 +1,5 @@
-<div class="row" data-equalizer>
-	<div id="edit-screen-border" class="medium-12 columns">
+<div class="wrapper row" data-equalizer>
+	<div id="edit-screen-border" class="medium-8 columns">
 		<div id="edit-screen-content">
 			<h1>Create a New List</h1>
 			<form ng-submit="addList()">
@@ -8,7 +8,7 @@
 			</form>
 		</div>	
 	</div>
-	<!--<div class="medium-4 columns">
+	<div class="medium-4 columns">
 		<div id="edit-screen-sidenav">
 			<ul>
 				<li><a href="#">Recent List 1</a></li>
@@ -18,5 +18,5 @@
 			</ul> 
 			<button id="view-all" class="main-buttons">View All</button>
 		</div>
-	</div>-->
+	</div>
 </div>
