--- a/static/rachel/foundation-5.3.1/css/faire_theme.css
+++ b/static/rachel/foundation-5.3.1/css/faire_theme.css
@@ -4,6 +4,11 @@
 	padding: 0;
 }
 
+.row .row{
+	width: 100%;
+	margin: 0;
+}
+
 /*---HEADER---*/
 
 #header{
@@ -94,11 +99,11 @@
 /*---Home Page Styles---*/
 
 #main-container{
-	margin-top: 20px;
+	margin: 20px 0px;
 }
 
 @media (max-width: 1024px){
-	#main-container .row{
+	#main-container .wrapper{
 		padding: 0px 10px;
 	}
 }
@@ -203,6 +208,7 @@ ul.individual-lists li{
 
 #edit-screen-content{
 	width: 90%;
+	margin-bottom: 15px;
 }
 
 @media (max-width: 640px){
@@ -217,51 +223,40 @@ ul.individual-lists li{
 	border-bottom: 6px solid #ddd;
 	line-height: 50px;
 	color: #2AA6CA;
-	margin-bottom: 25px;
+	margin-bottom: 15px;
 }
 
 .individual-list-items{
 	font-size: 14px;
 	list-style: none;
 	margin: 0px;
+	line-height: 50px;
+	border-bottom: 1px solid #eee;
 }
 
-.individual-list-items div{
-	width: 100%;
+.individual-list-items:last-child, 
+.individual-list-items.no-border{
+	border: 0;
 }
 
-@media (min-width: 641px){
-	.individual-list-items div:hover i.fi-pencil{
-		display: block;
-	}
+.individual-list-items input{
+	font-size: 14px;
+	padding: 6px 8px;
+	height: 28px;
+	margin: 12px 0px;
 }
 
-.individual-list-items div i.fi-pencil{
-	display: block;
-}
-
-@media (min-width: 641px){
-	.individual-list-items div i.fi-pencil{
-		display: none;
-	}
-}
-
-.individual-list-items .list-item-container{
-	float: left;
-	padding-bottom: 25px;
-}
-
-.individual-list-items .list-item-text{
-	width: 90%;
-	float: left;
-	min-height: 20px;
-}
-
-.individual-list-items div a{
-	width: 10%;
-	float: right;
-	text-align: right;
+.individual-list-items .list-icons .fa{
 	font-size: 18px;
+}
+
+.individual-list-items .list-icons .fa-trash{
+	padding-left: 8px;
+	cursor: pointer;
+}
+
+.individual-list-items .cross-out-task{
+	text-decoration: line-through;
 }
 
 .main-buttons{
