--- a/static/rachel/views/home.html
+++ b/static/rachel/views/home.html
@@ -1,4 +1,4 @@
-<div class="row" data-equalizer>
+<div class="wrapper row" data-equalizer>
 	<div class="small-12 medium-4 large-4 columns" ng-repeat="list in lists" data-equalizer-watch>
 		<a href="#/list/{{list.id}}">
 			<h1 class="list-title">
