--- a/static/rachel/views/home.html
+++ b/static/rachel/views/home.html
@@ -1,5 +1,5 @@
 <div class="wrapper row" data-equalizer>
-	<div class="small-12 medium-4 large-4 columns" ng-repeat="list in lists" data-equalizer-watch>
+	<div class="small-12 medium-4 large-4 columns home-lists" ng-repeat="list in lists" data-equalizer-watch>
 		<a href="#/list/{{list.id}}">
 			<h1 class="list-title">
 				<span class="list-name">{{list.name}}</span>
@@ -7,7 +7,7 @@
 			</h1>
 		</a>
 		<ul class="individual-lists">
-			<li ng-repeat="task in list.tasks | limitTo: 5">{{task.name}}</li>
+			<li ng-repeat="task in list.tasks | orderBy: homeTasksOrderBy | limitTo: 5" ng-class="{'display-none': task.status == 'deleted', 'cross-out-task': task.status == 'inactive'}">{{task.name}}</li>
 			<li><a href="#/list/{{list.id}}"><strong>View All Items</strong></a></li>
 		</ul>	
 	</div>			
