Closes #22 added edit list title functionality/styles and logout functionality

--- a/lib/views/themes/rachel/index.html
+++ b/lib/views/themes/rachel/index.html
@@ -43,7 +43,7 @@
 								<a href="#"><i class="fa fa-user"></i> Profile</a>
 							</li>
 							<li>
-								<a href="#"><i class="fa fa-sign-out"></i> Logout</a>
+								<a href="/logout"><i class="fa fa-sign-out"></i> Logout</a>
 							</li>
 						</ul> 
 					</section>
