--- a/static/rachel/foundation-5.3.1/css/faire_theme.css
+++ b/static/rachel/foundation-5.3.1/css/faire_theme.css
@@ -4,6 +4,10 @@ body{
 	padding: 0;
 }
 
+#wrapper{
+	padding-bottom: 20px;
+}
+
 .no-padding{
 	padding: 0;
 }
@@ -253,14 +257,16 @@ ul.individual-lists li{
 	border: 0;
 }
 
-.individual-list-items input{
+.individual-list-items input,
+.individual-list-title input{
 	font-size: 14px;
 	padding: 6px 8px;
 	height: 28px;
 	margin: 12px 0px;
 }
 
-.individual-list-items .list-icons .fa{
+.individual-list-items .list-icons .fa,
+.individual-list-title  .list-icons .fa{
 	font-size: 18px;
 }
 
