Adjusted line wrapping for list title and task

--- a/static/rachel/foundation-5.3.1/css/faire_theme.css
+++ b/static/rachel/foundation-5.3.1/css/faire_theme.css
@@ -244,6 +244,16 @@ ul.individual-lists li{
 	margin-bottom: 15px;
 }
 
+#edit-screen-content .list-name-view{
+	line-height: 35px;
+	display: inline-block;	
+}
+
+#edit-screen-content .task-name-view{
+	display: block;
+	line-height: 24px;
+}
+
 .individual-list-items{
 	font-size: 14px;
 	list-style: none;
