--- a/static/rachel/views/create-list.html
+++ b/static/rachel/views/create-list.html
@@ -3,7 +3,7 @@
 		<div id="edit-screen-content">
 			<h1>Create a New List</h1>
 			<form ng-submit="addList()">
-				<input type="text" name="name" ng-model="addNewListFormData.name" placeholder="make this required" />
+				<input type="text" name="name" ng-model="addNewListFormData.name" placeholder="Enter List Title" maxlength="50" />
 				<input type="submit" value="Create List" id="add-list" class="main-buttons right" />
 			</form>
 		</div>	
