--- a/static/rachel/foundation-5.3.1/css/faire_theme.css
+++ b/static/rachel/foundation-5.3.1/css/faire_theme.css
@@ -1,11 +1,23 @@
 /*---GLOBAL---*/
 
+html,
+body {
+   margin:0;
+   padding:0;
+   height:100%;
+}
+
 body{
 	padding: 0;
+	padding-bottom:60px;
+	min-height: 100%;
 }
 
 #wrapper{
 	padding-bottom: 20px;
+	min-height:100%;
+	height:100%;
+	position:relative;	
 }
 
 .no-padding{
@@ -19,6 +31,15 @@ body{
 .row .row{
 	width: 100%;
 	margin: 0;
+}
+
+#version{
+	width:100%;
+    color: #aaa;
+    font-size: 13px;
+	padding: 0px 10px;
+	clear: both;
+	text-align: right;
 }
 
 /*---HEADER---*/
@@ -111,12 +132,16 @@ body{
 /*---Home Page Styles---*/
 
 #main-container{
-	margin: 20px 0px;
+	height: 100%;
+}
+
+#main-container .wrapper{
+	padding: 25px 0px;
 }
 
 @media (max-width: 1024px){
 	#main-container .wrapper{
-		padding: 0px 10px;
+		padding: 25px 10px;
 	}
 }
 
