Gets rid of . for #27

--- a/lib/views/themes/rachel/index.html
+++ b/lib/views/themes/rachel/index.html
@@ -70,11 +70,12 @@
 			</form>
 		</div>-->			
 		<div id="main-container" ng-view></div>
-		<div id="version"><span>v.</span>\{{vm.version}}</div>
+		<div id="version"><span>v</span>\{{vm.version}}</div>
 	</div>
 	
 	<script src="rachel/foundation-5.3.1/js/vendor/jquery.js"></script>
 	<script src="rachel/foundation-5.3.1/js/foundation.min.js"></script>
+	<script src="rachel/foundation-5.3.1/js/foundation/foundation.reveal.js"></script>
 	<script src="rachel/foundation-5.3.1/js/vendor/angular-touch.min.js"></script>
 	<script src="rachel/js/faireService.js"></script>
 	<script src="rachel/js/faireCtrl.js"></script>	
