Added delete list functionality for #20

--- a/lib/views/themes/rachel/index.html
+++ b/lib/views/themes/rachel/index.html
@@ -17,7 +17,7 @@
   <script src="components/angular-route/angular-route.min.js"></script>
 
 </head>
-<body ng-app="faireApp">
+<body ng-app="faireApp" class="antialiased hide-extras">
 	<div id="wrapper" ng-controller="FaireGlobalController as vm">		
 		<div id="header" class="contain-to-grid">
 			<nav class="top-bar" data-topbar role="navigation">
@@ -79,9 +79,5 @@
 	<script src="rachel/foundation-5.3.1/js/vendor/angular-touch.min.js"></script>
 	<script src="rachel/js/faireService.js"></script>
 	<script src="rachel/js/faireCtrl.js"></script>	
-
-	<script>
-		$(document).foundation();
-	</script>
 </body>
 </html>
