--- a/lib/views/themes/rachel/index.html
+++ b/lib/views/themes/rachel/index.html
@@ -79,5 +79,9 @@
 	<script src="rachel/foundation-5.3.1/js/vendor/angular-touch.min.js"></script>
 	<script src="rachel/js/faireService.js"></script>
 	<script src="rachel/js/faireCtrl.js"></script>	
+	
+	<script>
+		$(document).foundation();
+	</script>	
 </body>
 </html>
