--- a/static/rachel/views/list.html
+++ b/static/rachel/views/list.html
@@ -73,12 +73,16 @@
 			<div id="delete-list-section">
 				<a href data-reveal-id="deleteListModal" class="main-buttons"><i class="fa fa-trash"></i> Delete List</a>
 				
-				<div id="deleteListModal" class="reveal-modal small" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
-					<h2 id="modalTitle">Delete "{{list.name}}"</h2>
-					<p>Are you sure you want to delete this list?</p>
-					<a href="#/" class="main-buttons" ng-click="deleteList(list)">Yes I'm Sure</a>
-					<a href class="main-buttons" ng-click="closeDeleteModal()">Cancel</a>
-					<a class="close-reveal-modal" aria-label="Close">&#215;</a>				
+				<div id="deleteListModal" class="reveal-modal small faire-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+					<h2 id="modalTitle">
+						<span class="delete-title">Delete List</span>
+						<a class="close-reveal-modal" aria-label="Close">&#215;</a>
+					</h2>
+					<p>Are you sure you want to delete "{{list.name}}"?</p>
+					<div class="text-center">
+						<a href="#/" class="main-buttons" ng-click="deleteList(list)">Yes I'm Sure</a>
+						<a href class="main-buttons" ng-click="closeDeleteModal()">Cancel</a>	
+					</div>
 				</div>
 			</div>			
 		</div>
