Closes #25 and #28 added unshare and change theme functionality and styles

--- a/lib/views/themes/rachel/index.html
+++ b/lib/views/themes/rachel/index.html
@@ -40,7 +40,7 @@
 								<a href="#/list/new"><i class="fa fa-plus-circle"></i> Create New List</a>
 							</li>								
 							<li>
-								<a href="#"><i class="fa fa-user"></i> Profile</a>
+								<a href="#/profile"><i class="fa fa-user"></i> Profile</a>
 							</li>
 							<li>
 								<a href="/logout"><i class="fa fa-sign-out"></i> Logout</a>
